force-app/main/default/objects/Product_Category__c/Product_Category__c.object-meta.xml
<CustomObject>
    <label>Product Category</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Category</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>