force-app/main/default/objects/Product_Category__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Category</relationshipLabel>
    <relationshipName>Products_to_Category</relationshipName>
    <type>Lookup</type>
</CustomField>